# data-engg-projects

./: CHEATSHEET.md
01-Software-Engineering-Best-Practices/01-Setup/00-Test-Setup/: README.md  pyproject.toml  test_output.txt
01-Software-Engineering-Best-Practices/01-Setup/01-Package-creation/: README.md
01-Software-Engineering-Best-Practices/01-Setup/02-Linux-and-Bash/: README.md  check_ssh.service  check_ssh.sh  check_ssh.timer
01-Software-Engineering-Best-Practices/02-Python-For-Data-Engineering/01-API-Requests/: README.md  pyproject.toml  test_output.txt
01-Software-Engineering-Best-Practices/02-Python-For-Data-Engineering/02-Image-transformation/: README.md  pyproject.toml  test_output.txt
01-Software-Engineering-Best-Practices/02-Python-For-Data-Engineering/03-Pandas/: README.md  pyproject.toml  test_output.txt
01-Software-Engineering-Best-Practices/02-Python-For-Data-Engineering/04-Dash/: README.md  pyproject.toml
01-Software-Engineering-Best-Practices/02-Python-For-Data-Engineering/05-Recap/: pyproject.toml  recap.ipynb
01-Software-Engineering-Best-Practices/03-Best-Practices/02-TDD/: README.md
01-Software-Engineering-Best-Practices/03-Best-Practices/03-Continuous-Integration/: README.md
01-Software-Engineering-Best-Practices/03-Best-Practices/04-Continuous-Deployment/: README.md
01-Software-Engineering-Best-Practices/03-Best-Practices/06-Recap/: README.md
01-Software-Engineering-Best-Practices/04-Data-Lakes/01-Scraping/: README.md  pyproject.toml
01-Software-Engineering-Best-Practices/04-Data-Lakes/02-Upload/: README.md  pyproject.toml
01-Software-Engineering-Best-Practices/04-Data-Lakes/03-Great-expectations/: README.md  pyproject.toml
01-Software-Engineering-Best-Practices/04-Data-Lakes/04-Tagging/: README.md  pyproject.toml
01-Software-Engineering-Best-Practices/04-Data-Lakes/05-Automation/: README.md
01-Software-Engineering-Best-Practices/04-Data-Lakes/06-Amundsen/: pyproject.toml
01-Software-Engineering-Best-Practices/05-Docker-and-Deployment/01-Docker-101/: pyproject.toml
01-Software-Engineering-Best-Practices/05-Docker-and-Deployment/02-Dockerfile/: README.md  pyproject.toml
01-Software-Engineering-Best-Practices/05-Docker-and-Deployment/05-Multistage-builds/python/: pyproject.toml
02-Database-Fundamentals/01-SQL-Basics/: cmds.txt
02-Database-Fundamentals/01-SQL-Basics/01-Setup/: README.md  actor_query.sql  monthly_revenue_query.sql  rentals_query.sql  test_output.txt
02-Database-Fundamentals/01-SQL-Basics/02-Querying/: README.md  category_performance_query.sql  co_stars_query.sql  last_rental_query.sql  pyproject.toml  rental_duration_query.sql  test_output.txt  weekly_trends_query.sql
02-Database-Fundamentals/01-SQL-Basics/03-Recommendation-system/: improved_text_search_query.sql  pyproject.toml  recommendation.py  recommendation_query.sql  test_output.txt  text_search_query.sql
02-Database-Fundamentals/01-SQL-Basics/04-Create-SQL/: pyproject.toml
02-Database-Fundamentals/02-Data-Warehousing/01-Adventure-works/: pyproject.toml
02-Database-Fundamentals/03-SQL-Databases/01-Movies-DB/: pyproject.toml
02-Database-Fundamentals/03-SQL-Databases/02-SQL-Basics/: pyproject.toml
02-Database-Fundamentals/03-SQL-Databases/04-Indexing/: pyproject.toml
02-Database-Fundamentals/03-SQL-Databases/05-Extension/: README.md  pyproject.toml
02-Database-Fundamentals/03-SQL-Databases/06-WAL/: pyproject.toml
02-Database-Fundamentals/04-Backend-and-Database-Management/01-Twitter-CRUD/: pyproject.toml
02-Database-Fundamentals/04-Backend-and-Database-Management/02-Twitter-in-Production/: pyproject.toml
02-Database-Fundamentals/05-Docker-compose/01-Docker-Compose/: .dockerignore  README.md  makefile  pyproject.toml
02-Database-Fundamentals/05-Docker-compose/03-Docker-under-the-hood/: pyproject.toml
03-Data-Storage-and-Batch-Pipelines/01-ETL-and-introduction-to-Airflow/01-Breaking-Bad/: README.md  docker-compose.yml  pyproject.toml
03-Data-Storage-and-Batch-Pipelines/01-ETL-and-introduction-to-Airflow/02-Local-ETL/: README.md  pyproject.toml
03-Data-Storage-and-Batch-Pipelines/02-ELT-DBT/01-Setup-DBT/: pyproject.toml
03-Data-Storage-and-Batch-Pipelines/02-ELT-DBT/02-DBT-Basics/: README.md  pyproject.toml
03-Data-Storage-and-Batch-Pipelines/02-ELT-DBT/03-DBT-Advanced/: README.md
03-Data-Storage-and-Batch-Pipelines/02-ELT-DBT/04-DBT-Optimization-Optional/: README.md  pyproject.toml
03-Data-Storage-and-Batch-Pipelines/03-Pipeline-Orchestration/01-Advanced-Airflow/: README.md  pyproject.toml
03-Data-Storage-and-Batch-Pipelines/03-Pipeline-Orchestration/02-DBT-in-Airflow/: README.md  pyproject.toml
03-Data-Storage-and-Batch-Pipelines/03-Pipeline-Orchestration/Recap/: pyproject.toml
03-Data-Storage-and-Batch-Pipelines/04-Visualization-Best-Practices/00-Metabase/: README.md  pyproject.toml
03-Data-Storage-and-Batch-Pipelines/04-Visualization-Best-Practices/01-Streamlit/: README.md  pyproject.toml
03-Data-Storage-and-Batch-Pipelines/05-Kubernetes/01-Minikube-Kubectl/: README.md  pyproject.toml
03-Data-Storage-and-Batch-Pipelines/05-Kubernetes/02-Streamlit-K8s-Deployment/: README.md  pyproject.toml
03-Data-Storage-and-Batch-Pipelines/05-Kubernetes/03-Kompose/: README.md
03-Data-Storage-and-Batch-Pipelines/05-Kubernetes/05-Helm/: pyproject.toml
04-Data-at-Scale/01-Spark-Basics/00-Spark-warmup/: exercise.ipynb  pyproject.toml
04-Data-at-Scale/01-Spark-Basics/01-Python-Vectorization/: pyproject.toml
04-Data-at-Scale/01-Spark-Basics/02-Map-Reduce/: README.md  pyproject.toml
04-Data-at-Scale/01-Spark-Basics/03-Python-Distribution/: README.md  pyproject.toml
Apps/: makefile
Apps/fast_app/: .dockerignore  Dockerfile  fast_app_cmds.txt  makefile  pyproject.toml
Apps/longest-word/: cmds.txt
Apps/yelp/: pyproject.toml
(+100 files in other folders)
