[tool.poetry]
name = "yelp"
version = "0.1.0"
description = ""
authors = ["MAbhishek Verma <abhi.verma9420@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.10.2"
alembic = "^1.9.0"
fastapi = "^0.88.0"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
