[tool.poetry]
name = "05-recap"
version = "0.1.0"
description = ""
authors = ["Oliver Giles <oliver.giles@lewagon.org>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
pympler = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
