[tool.poetry]
name = "06-amundsen"
version = "0.1.0"
description = ""
authors = ["Oliver Giles <oliver.giles@lewagon.org>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
amundsen-databuilder = "^7.4.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
