[tool.poetry]
name = "05-wal"
version = "0.1.0"
description = ""
authors = ["Oliver Giles <oliver.giles@lewagon.org>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
psycopg2-binary = "2.9.9"
ipython = "^8.0.0"
pypgoutput = {git = "https://github.com/ogiles1999/pypgoutput.git"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
