[tool.poetry]
name = "05-helm"
version = "0.1.0"
description = ""
authors = ["Oliver Giles <ogiles@email.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
cryptography = "^39.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
