[tool.poetry]
name = "00-spark-warmup"
version = "0.1.0"
description = ""
authors = ["Oliver Giles <oliver.giles@lewagon.org>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
pyspark = "^3.5.0"
nbresult = "^0.0.9"
jupyter = "^1.0.0"
pytest = "^7.4.3"
pandas = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
