[tool.poetry]
name = "python_vectorization"
version = "0.1.0"
description = ""
authors = ["S. Saunier <seb@lewagon.org>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
lewagonde = { path = "../../../common/lewagonde/", develop = true }
pandas = "^1.5.2"
numpy = "^1.23.5"
numba = "^0.56.4"
cython = "^0.29.32"
ipykernel = "^6.17.1"

[tool.poetry.dev-dependencies]
ipython = "^8.4.0"
black = "^22.3.0"
isort = "^5.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 160
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 160
multi_line_output = 3
include_trailing_comma = true
